--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -1,5 +1,16 @@
+# target 'iosApp' do
+#   use_frameworks!
+#   platform :ios, '14.1'
+#   pod 'shared', :path => '../shared'
+# end
+
+use_frameworks!
+
+platform :ios, '14.1'
+
+install! 'cocoapods', :deterministic_uuids => false
+
 target 'iosApp' do
-  use_frameworks!
-  platform :ios, '14.1'
-  pod 'shared', :path => '../shared'
+    pod 'shared', :path => '../shared/'
+    pod 'SwiftLint'
 end
